<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/contributionsListBackground"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >
        <include layout="@layout/toolbar"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/tabBackground"
            app:tabIndicatorColor="?attr/tabIndicatorColor"
            app:tabSelectedTextColor="?attr/tabSelectedTextColor"
            app:tabTextColor="?attr/tabTextColor"
            android:layout_below="@id/toolbar"
            app:tabMode="fixed" />

        <FrameLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/contributionsFragmentContainer"
            android:orientation="horizontal"
            android:layout_below="@id/tab_layout">

            <fr.free.nrw.commons.contributions.UnswipableViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>