...
      android:layout_weight="0.5"
      android:layout_height="match_parent" />

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/leaderboard_list"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="10dp"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    android:scrollbarThumbVertical="@color/primaryColor"
...
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/filters" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/leaderboard_my_rank_button_text"
    app:iconGravity="start"
    app:layout_constraintBottom_toBottomOf="@+id/leaderboard_list"
...
