<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBackground"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize">
        <include
          android:id="@+id/toolbarBinding"
          layout="@layout/toolbar" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLayout"
        android:layout_marginTop="?attr/actionBarSize">

        <fragment
            android:id="@+id/settingsFragment"
            android:name="fr.free.nrw.commons.settings.SettingsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@xml/preferences"
            />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
