...
                    android:letterSpacing="0.02"
                    android:textColor="@color/main_background_dark"
                    android:textSize="@dimen/hamburger_menu_item" />
                </LinearLayout>

            <LinearLayout
                android:id="@+id/nearby_item"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/hamburger_item_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

...
                    android:letterSpacing="0.02"
                    android:textColor="@color/main_background_dark"
                    android:textSize="@dimen/hamburger_menu_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_item"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/hamburger_item_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

...
